--- a/styles/style.css
+++ b/styles/style.css
@@ -1,1 +1,50 @@
-/* место для вашего кода */
+.header {
+  display: grid;
+  grid-template-columns: repeat(12, auto);
+  grid-template-rows: repeat(1, 109px);
+  justify-content: center;
+  align-content: center;
+  width: 1340px;
+  height: 109px;
+  justify-content: space-between;
+  align-items: flex-start;
+  padding: 92px 49px 2643px 51px;
+  text-align: justify;
+}
+
+.header__logo {
+  width: 148px;
+  height: 105px;
+  flex-shrink: 0;
+  display: block;
+}
+
+.header__menu {
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+  align-self: center;
+}
+
+.header__menu-list {
+  list-style: circle;
+  display: grid;
+  grid-template-columns: repeat(3, auto);
+  gap: 32px;
+  grid-template-rows: repeat(1, auto);
+  
+  
+  
+}
+
+.header__menu-link-main {
+  list-style: none;
+  text-decoration: none;
+}
+
+.address {
+  display: flex;
+  flex-direction: column;
+  align-self: center;
+}
