--- a/styles/style.css
+++ b/styles/style.css
@@ -1,22 +1,26 @@
 .header {
   display: grid;
-  grid-template-columns: repeat(12, auto);
-  grid-template-rows: repeat(1, 109px);
+  grid-template-columns: 4fr 4fr 4fr;
+  grid-template-rows: auto;
   justify-content: center;
   align-content: center;
-  width: 1340px;
+  width: 1440px;
   height: 109px;
   justify-content: space-between;
   align-items: flex-start;
-  padding: 92px 49px 2643px 51px;
+  padding: 92px 49px 92px 51px;
   text-align: justify;
+  margin: 0;
 }
 
 .header__logo {
+  display: grid;
+  justify-items: center;
+}
+
+.header__logo-image {
   width: 148px;
   height: 105px;
-  flex-shrink: 0;
-  display: block;
 }
 
 .header__menu {
@@ -32,10 +36,6 @@
   display: grid;
   grid-template-columns: repeat(3, auto);
   gap: 32px;
-  grid-template-rows: repeat(1, auto);
-  
-  
-  
 }
 
 .header__menu-link-main {
@@ -47,4 +47,93 @@
   display: flex;
   flex-direction: column;
   align-self: center;
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+  justify-self: end;
+}
+
+.cover {
+  background-image: url(../images/cover.jpg);
+  background-size: cover;
+  width: 1440px;
+  height: 764px;
+  color: #fff;
+  position: relative;
+}
+
+.overlay {
+  background-color: rgba(0, 0, 0, 0.5);
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 0;
+;
+
+}
+
+.cover__title {
+  padding: 165px 50px 135px 50px;
+  font-family: Raleway;
+  font-size: 100px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 115%;
+  letter-spacing: 60px;
+  text-transform: uppercase;
+  text-align: center;
+  position: relative;
+  z-index: 1;
+}
+
+.aligned-text {
+  display: block;
+  text-align: start;
+}
+
+.aligned-text_center {
+  display: block;
+  text-align: center;
+  padding-top: 20px;
+  padding-bottom: 20px;
+}
+
+.aligned-text_right {
+  display: block;
+  text-align: end;
+}
+
+.no-letter-spacing {
+  letter-spacing: 0;
+}
+
+.letter-spacing-extended {
+  letter-spacing: 30px;
+}
+
+.cover__description {
+  position: relative;
+  font-size: 22px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 28px;
+  text-transform: uppercase;
+  z-index: 1;
+  display: flex;
+  justify-content: flex-end
+
+}
+
+.cover__description-text {
+  word-spacing: 27px;
+}
+
+.bet-button {
+  border: 1px solid white;
+  padding: 12px 32px 12px 32px;
+  margin-right: 82px;
+  margin-left: 110px;
 }
