--- a/styles/global.css
+++ b/styles/global.css
@@ -9,7 +9,6 @@ body {
   margin: 0;
   font-family: Raleway, sans-serif;
   font-weight: 400;
-  
 }
 
 h1,
@@ -29,6 +28,7 @@ blockquote {
 
 a {
   color: inherit;
+  text-decoration: none;
 }
 
 img {
