--- a/styles/style.css
+++ b/styles/style.css
@@ -1,6 +1,7 @@
 .link {
-  border-bottom: 1px solid #000;
-  align-items: flex-start;
+  text-decoration-line: underline;
+  text-underline-offset: 4px;
+  text-decoration-thickness: 1px;
 }
 
 .header {
@@ -130,6 +131,7 @@
 .cover__description {
   position: relative;
   font-size: 22px;
+  font-family: Raleway, sans-serif;
   font-style: normal;
   font-weight: 400;
   line-height: 28px;
@@ -145,10 +147,19 @@
 }
 
 .bet-button {
+  background-color: transparent;
   border: 1px solid white;
-  padding: 12px 32px;
+  padding: 11px 32px;
   margin-left: 78px;
+  font-family: Raleway, sans-serif;
   line-height: 26px;
+  font-size: 22px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 28px;
+  text-transform: uppercase;
+  z-index: 1;
+  color: #fff;
 }
 
 .lots {
@@ -221,8 +232,10 @@
   font-size: 22px;
   font-style: normal;
   font-weight: 700;
-  line-height: 120%;
+  line-height: 26px;
   text-decoration-line: underline;
+  text-underline-offset: 3px;
+  text-decoration-thickness: 1px;
   text-transform: uppercase;
   z-index: 1;
 }
@@ -251,7 +264,6 @@
 
 .about {
   display: flex;
-  justify-content: space-between;
   align-items: flex-start;
   padding: 0px 50px;
   gap: 25px;
@@ -299,16 +311,11 @@
   font-weight: 400;
   line-height: 23px;
   margin-bottom: 28px;
+  width: 885px;
 }
 
-.about__text-sequel {
-  color: #000;
-  font-family: Raleway, sans-serif;
-  font-size: 20px;
-  font-style: normal;
-  font-weight: 400;
-  line-height: 23px;
-  max-width: 885px;
+.about__text:last-of-type {
+  margin: 0;
 }
 
 .footer {
